--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
     <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="session-popup-portal"></div>
   </body>
 </html>
